RESOLVED FIXED232920
imported/w3c/web-platform-tests/webmessaging/broadcastchannel/workers.html is flaky crashing in debug
https://bugs.webkit.org/show_bug.cgi?id=232920
Summary imported/w3c/web-platform-tests/webmessaging/broadcastchannel/workers.html is...
Chris Dumez
Reported 2021-11-09 19:12:30 PST
imported/w3c/web-platform-tests/webmessaging/broadcastchannel/workers.html is flaky crashing in debug: ASSERTION FAILED: m_wasConstructedOnMainThread == isMainThread() /Volumes/Data/worker/macOS-AppleSilicon-Big-Sur-Debug-Build-EWS/build/WebKitBuild/Debug/usr/local/include/wtf/CallbackAggregator.h(41) : WTF::CallbackAggregator::~CallbackAggregator() 1 0x13a3ae208 WTFCrash 2 0x117b47cb0 WebCore::JSTransformStreamDefaultController::createPrototype(JSC::VM&, WebCore::JSDOMGlobalObject&) 3 0x1194c5df8 WTF::CallbackAggregator::~CallbackAggregator() 4 0x1194c5d60 WTF::CallbackAggregator::~CallbackAggregator() 5 0x1194c5d28 WTF::ThreadSafeRefCounted<WTF::CallbackAggregator, (WTF::DestructionThread)0>::deref() const::'lambda'()::operator()() const 6 0x1194c5c98 WTF::ThreadSafeRefCounted<WTF::CallbackAggregator, (WTF::DestructionThread)0>::deref() const 7 0x1194c5c24 WTF::Ref<WTF::CallbackAggregator, WTF::RawPtrTraits<WTF::CallbackAggregator> >::~Ref() 8 0x1194bde40 WTF::Ref<WTF::CallbackAggregator, WTF::RawPtrTraits<WTF::CallbackAggregator> >::~Ref() 9 0x1194c352c WebCore::BroadcastChannel::dispatchMessageTo(WTF::ObjectIdentifier<WebCore::BroadcastChannelIdentifierType>, WTF::Ref<WebCore::SerializedScriptValue, WTF::RawPtrTraits<WebCore::SerializedScriptValue> >&&, WTF::CompletionHandler<void ()>&&)::$_4::~$_4() 10 0x1194bde0c WebCore::BroadcastChannel::dispatchMessageTo(WTF::ObjectIdentifier<WebCore::BroadcastChannelIdentifierType>, WTF::Ref<WebCore::SerializedScriptValue, WTF::RawPtrTraits<WebCore::SerializedScriptValue> >&&, WTF::CompletionHandler<void ()>&&)::$_4::~$_4() 11 0x1194cfed8 WTF::Detail::CallableWrapper<WebCore::BroadcastChannel::dispatchMessageTo(WTF::ObjectIdentifier<WebCore::BroadcastChannelIdentifierType>, WTF::Ref<WebCore::SerializedScriptValue, WTF::RawPtrTraits<WebCore::SerializedScriptValue> >&&, WTF::CompletionHandler<void ()>&&)::$_4, void, WebCore::ScriptExecutionContext&>::~CallableWrapper() 12 0x1194cfdac WTF::Detail::CallableWrapper<WebCore::BroadcastChannel::dispatchMessageTo(WTF::ObjectIdentifier<WebCore::BroadcastChannelIdentifierType>, WTF::Ref<WebCore::SerializedScriptValue, WTF::RawPtrTraits<WebCore::SerializedScriptValue> >&&, WTF::CompletionHandler<void ()>&&)::$_4, void, WebCore::ScriptExecutionContext&>::~CallableWrapper() 13 0x1194cfde0 WTF::Detail::CallableWrapper<WebCore::BroadcastChannel::dispatchMessageTo(WTF::ObjectIdentifier<WebCore::BroadcastChannelIdentifierType>, WTF::Ref<WebCore::SerializedScriptValue, WTF::RawPtrTraits<WebCore::SerializedScriptValue> >&&, WTF::CompletionHandler<void ()>&&)::$_4, void, WebCore::ScriptExecutionContext&>::~CallableWrapper() 14 0x11681d034 std::__1::default_delete<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&> >::operator()(WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&>*) const 15 0x11681cfac std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&> > >::reset(WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&>*) 16 0x11681cf40 std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&> > >::~unique_ptr() 17 0x11681cf04 std::__1::unique_ptr<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&>, std::__1::default_delete<WTF::Detail::CallableWrapperBase<void, WebCore::ScriptExecutionContext&> > >::~unique_ptr() 18 0x11681ced0 WTF::Function<void (WebCore::ScriptExecutionContext&)>::~Function() 19 0x11672b010 WTF::Function<void (WebCore::ScriptExecutionContext&)>::~Function() 20 0x117ab03f0 WebCore::ScriptExecutionContext::Task::~Task() 21 0x11908dcc0 WebCore::ScriptExecutionContext::Task::~Task() 22 0x11b902774 WebCore::WorkerDedicatedRunLoop::Task::~Task() 23 0x11b90270c WebCore::WorkerDedicatedRunLoop::Task::~Task() 24 0x11b9026d4 std::__1::default_delete<WebCore::WorkerDedicatedRunLoop::Task>::operator()(WebCore::WorkerDedicatedRunLoop::Task*) const 25 0x11b9026a0 std::__1::unique_ptr<WebCore::WorkerDedicatedRunLoop::Task, std::__1::default_delete<WebCore::WorkerDedicatedRunLoop::Task> >::reset(WebCore::WorkerDedicatedRunLoop::Task*) 26 0x11b902634 std::__1::unique_ptr<WebCore::WorkerDedicatedRunLoop::Task, std::__1::default_delete<WebCore::WorkerDedicatedRunLoop::Task> >::~unique_ptr() 27 0x11b8ddb28 std::__1::unique_ptr<WebCore::WorkerDedicatedRunLoop::Task, std::__1::default_delete<WebCore::WorkerDedicatedRunLoop::Task> >::~unique_ptr() 28 0x11b8dd258 WebCore::WorkerDedicatedRunLoop::runCleanupTasks(WebCore::WorkerOrWorkletGlobalScope*) 29 0x11b8db7c4 WebCore::WorkerDedicatedRunLoop::run(WebCore::WorkerOrWorkletGlobalScope*) 30 0x11b8db738 WebCore::WorkerOrWorkletThread::runEventLoop() 31 0x11b898da4 WebCore::DedicatedWorkerThread::runEventLoop()
Attachments
Patch (3.43 KB, patch)
2021-11-09 19:16 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-11-09 19:16:49 PST
Alex Christensen
Comment 2 2021-11-10 09:22:24 PST
*** Bug 232946 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2021-11-10 09:51:24 PST
Committed r285587 (244095@main): <https://commits.webkit.org/244095@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443767 [details].
Radar WebKit Bug Importer
Comment 4 2021-11-10 09:52:34 PST
Note You need to log in before you can comment on or make changes to this bug.